crates/plotnik-tests/tests/03-analyze/alternations/mixed_nested_in_sequence.txt
Q = {
  (head)
  [
    A: (a)
    (b)
  ]
}
------------------ DIAGNOSTICS -------------------
error: an alternation cannot mix labeled and unlabeled alternatives
 --> query.ptk:5:5
  |
4 |     A: (a)
  |     - labeled alternative here
5 |     (b)
  |     ^^^
  |
help: either label every alternative or remove all labels
-------------------- SYMBOLS ---------------------
